@@ -1,19 +1,28 @@
-FROM docker.io/ubuntu:focal as builder
-ARG jre_download_link=https://cdn.azul.com/zulu/bin/zulu17.34.19-ca-jre17.0.3-linux_x64.tar.gz
-ARG resolvingdeps=https://github.com/tran4774/Resolving-Shared-Library/releases/download/v1.0.2/resolvingdeps
-ADD ${jre_download_link} /home/jre.tar.gz
-ADD ${resolvingdeps} /home/
+FROM docker.io/library/ubuntu:focal AS builder
+ARG DEBIAN_FRONTEND=noninteractive
+ARG resolvingdeps=https://github.com/tran4774/Resolving-Shared-Library/releases/download/v1.0.3/resolving.sh
+
+ARG SDK_IDENTIFIER=22.1.0.r17-grl
+
+ADD ${resolvingdeps} /home/resolvingdeps.sh
+
 WORKDIR /home
 RUN \
-    tar -xf jre.tar.gz && mv */ jre \
-    && chmod +x resolvingdeps \
-    && ./resolvingdeps -p /home/jre \
-    && rm -rf deps/tmp
+    bash -c "apt-get update && apt-get install -y curl zip unzip \
+    && curl -s "https://get.sdkman.io" | bash"
+RUN \
+    bash -c " \
+    source "$HOME/.sdkman/bin/sdkman-init.sh" \
+    && sdk install java $SDK_IDENTIFIER"
+RUN \
+    /root/.sdkman/candidates/java/current/bin/java --list-modules \
+    && /root/.sdkman/candidates/java/current/bin/java --list-modules | grep "java\." | sed -E "s/@.+//g" | tr "\n" "," | xargs -I {} /root/.sdkman/candidates/java/current/bin/jlink --output jre --compress=2 --no-header-files --no-man-pages --module-path ../jmods --add-modules {} \
+    && chmod +x resolvingdeps.sh \
+    && ./resolvingdeps.sh -p /home/jre
 
 FROM gcr.io/distroless/static
 COPY --from=builder /home/jre/ /usr/jre/
 COPY --from=builder /home/deps/ /
-COPY --from=builder /lib/x86_64-linux-gnu/libz.so.1 /lib/x86_64-linux-gnu/
 ENV JAVA_HOME=/usr/jre/
 ENV PATH=$PATH:$JAVA_HOME/bin
 CMD ["java", "--version"]
